State of simulation before logs deletion